--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
 
           <div class="row m-t-24 custom-row">
             <div class="col-12 col-sm-6">
-              <button mat-stroked-button class="w-100" (click)="loginGmail()">
+              <button mat-stroked-button class="w-100" >
                 <div class="d-flex align-items-center">
                   <img src="/assets/images/svgs/google-icon.svg" alt="google" width="16" class="m-r-8" />
                   Sign in with Google
