--- a/front-end/src/app/auth/register/register.component.html
+++ b/front-end/src/app/auth/register/register.component.html
@@ -49,25 +49,25 @@
 
           <div class="or-border m-t-30">or sign up with</div>
 
-          <form class="m-t-30">
+          <form  [formGroup]="FormRegister" (click)="Register()" class="m-t-30">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
               >Name</mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
+              <input matInput  [formControlName]="ControlName" />
             </mat-form-field>
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
               >Email Adddress</mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="email" />
+              <input matInput type="email"  [formControlName]="ControlEmail" />
             </mat-form-field>
             <!-- password -->
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
               >Password</mat-label
             >
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
+              <input matInput  [formControlName]="ControlPassword" type="password" />
             </mat-form-field>
 
             <a [routerLink]="['/']" mat-flat-button color="primary" class="w-100">
