--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
 
           <div class="or-border m-t-30">or sign in with</div>
 
-          <form [formGroup]="formLogin" (click)="login()" class="m-t-30">
+          <form [formGroup]="formLogin"  (click)="login()" class="m-t-30">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput [formControlName]="controlEmail" />
@@ -57,13 +57,14 @@
               Password must be at least 8 characters long
             </label><br>
 
+            <h3 *ngIf="messageLogin" [style.color]="'red'" > Email or password is incorrct</h3>
 
             <div class="d-flex align-items-center m-b-12">
               <mat-checkbox color="primary">Remember this Device</mat-checkbox>
               <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
                 ?</a>
             </div>
-            <button mat-flat-button color="primary" class="w-100" [disabled]="!formLogin.valid">
+            <button  mat-flat-button color="primary" class="w-100" [disabled]="!formLogin.valid">
               Sign In
             </button>
             <!-- input -->
