[register] display message error

--- a/front-end/src/app/auth/register/register.component.html
+++ b/front-end/src/app/auth/register/register.component.html
@@ -88,6 +88,8 @@
             </button>
             <!-- input -->
           </form>
+
+          <label [style.color]="'red'" >{{messageError}} </label>
           <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
 
             <a [routerLink]="['/auth']" class="text-decoration-none text-primary f-w-500 f-s-14">
