--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
 
           <div class="or-border m-t-30">or sign in with</div>
 
-          <form [formGroup]="formLogin"  (click)="login()" class="m-t-30">
+          <form [formGroup]="formLogin"   class="m-t-30">
             <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Username</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput [formControlName]="controlEmail" />
@@ -64,7 +64,7 @@
               <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
                 ?</a>
             </div>
-            <button  mat-flat-button color="primary" class="w-100" [disabled]="!formLogin.valid">
+            <button (click)="login()"  mat-flat-button color="primary" class="w-100" [disabled]="!formLogin.valid">
               Sign In
             </button>
             <!-- input -->
