[auth]midllware page send message

--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -61,7 +61,7 @@
 
             <div class="d-flex align-items-center m-b-12">
               <mat-checkbox color="primary">Remember this Device</mat-checkbox>
-              <a [routerLink]="['/']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
+              <a [routerLink]="['/auth/resetPassword']" class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password
                 ?</a>
             </div>
             <button (click)="login()"  mat-flat-button color="primary" class="w-100" [disabled]="!formLogin.valid">
