--- a/front-end/src/app/auth/login/login.component.html
+++ b/front-end/src/app/auth/login/login.component.html
@@ -57,7 +57,7 @@
               Password must be at least 8 characters long
             </label><br>
 
-            <h3 *ngIf="messageLogin" [style.color]="'red'" > Email or password is incorrct</h3>
+            <h3 *ngIf="messageLogin" [style.fontSize]="'17px'" [style.color]="'red'" > Email or password is incorrct</h3>
 
             <div class="d-flex align-items-center m-b-12">
               <mat-checkbox color="primary">Remember this Device</mat-checkbox>
