--- a/front-end/src/app/contacts/table/table.component.html
+++ b/front-end/src/app/contacts/table/table.component.html
@@ -13,12 +13,11 @@
         <mat-label>Choose an option</mat-label>
         <mat-select >
           <mat-option value="option1">Option 1</mat-option>
-          <mat-option value="option2" disabled>Option 2 (disabled)</mat-option>
-          <mat-option value="option3">Option 3</mat-option>
+
         </mat-select>
       </mat-form-field>
 
-      <button mat-raised-button class="btn-add" >Add new contact</button>
+      <button mat-raised-button class="btn-add" >Add new user</button>
     </mat-card-content>
   </mat-card>
 </div>
@@ -32,13 +31,13 @@
       <div class="table-responsive m-t-16">
         <table mat-table [dataSource]="ELEMENT_DATA" class="w-100">
           <!-- Position Column -->
-          <ng-container matColumnDef="assigned">
+          <ng-container matColumnDef="User">
             <th
               mat-header-cell
               *matHeaderCellDef
               class="f-w-600 mat-subtitle-1 f-s-14"
             >
-              Assigned
+            User
             </th>
             <td mat-cell *matCellDef="let element">
               <div class="d-flex align-items-center">
@@ -61,13 +60,13 @@
           </ng-container>
 
           <!-- Name Column -->
-          <ng-container matColumnDef="name">
+          <ng-container matColumnDef="Role">
             <th
               mat-header-cell
               *matHeaderCellDef
               class="f-w-600 mat-subtitle-1 f-s-14"
             >
-              Name
+            Role
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
               {{ element.productName }}
@@ -75,13 +74,13 @@
           </ng-container>
 
           <!-- Weight Column -->
-          <ng-container matColumnDef="priority">
+          <ng-container matColumnDef="Email">
             <th
               mat-header-cell
               *matHeaderCellDef
               class="f-w-600 mat-subtitle-1 f-s-14"
             >
-              Priority
+            Email
             </th>
             <td mat-cell *matCellDef="let element">
               <ng-template [ngIf]="element.priority == 'low'">
@@ -123,13 +122,13 @@
           </ng-container>
 
           <!-- Symbol Column -->
-          <ng-container matColumnDef="budget">
+          <ng-container matColumnDef="Birthday">
             <th
               mat-header-cell
               *matHeaderCellDef
               class="f-w-600 mat-subtitle-1 f-s-14"
             >
-              Budget
+            Birthday
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
               ${{ element.budget }}k
